# exchange_gateway

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
migrations/: 001_init.sql
src/: caldav.rs  config.rs  eas.rs  ews.rs  ews_marshaller.rs  main.rs  models.rs  rrule_engine.rs  storage.rs  sync.rs  utils.rs  wbxml.rs
