[package]
name = "exchange_gateway"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
tokio = { version = "1.86", features = ["full"] }
axum = { version = "0.9.0", features = ["headers"] }
hyper = "0.14"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.6"
tracing-subscriber = "0.4"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rrule = "0.6"
icalendar = "0.15"
hmac = "0.13"
sha2 = "0.10"
bytes = "1.4"
lazy_static = "1.4"
