[package]
name = "exchange_gateway"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
tokio = { version = "^1.48.0", features = ["full"] }
axum = { version = "^0.8.7", features = ["headers"] }
hyper = "^1.8.1"
reqwest = { version = "^0.12.24", features = ["rustls-tls", "json"] }
quick-xml = "^0.38.4"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
toml = "^0.9.8"
sqlx = { version = "^0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
anyhow = "^1.0.100"
thiserror = "^2.0.17"
tracing = "^0.1.43"
tracing-subscriber = "^0.3.22"
base64 = "^0.22.1"
uuid = { version = "^1.19.0", features = ["v4"] }
chrono = { version = "^0.4.42", features = ["serde"] }
rrule = "^0.14.0"
icalendar = "^0.17.5"
hmac = "^0.12.1"
sha2 = "^0.10.9"
bytes = "^1.11.0"
lazy_static = "^1.5.0"
